mudança no style

--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ table {
 
 #imagem {
     width: 300px;
+    margin-right: 50px;
+}
+
+h1 {
+    border: 2px double black;
+    border-radius: 10px;
+    max-width: 20%;
+    margin-left: 720px;
 }
 
 th,
